# cinderx

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  _cinderx-lib.cpp  _cinderx-lib.h  arm_jit_guide.md  async_lazy_value.cpp  async_lazy_value.h  buck_3_12_mode  build.sh  module_state.cpp  module_state.h  pyproject.toml  python.h  setup.py  vscode_lsp_buck.config  vscode_lsp_buck.mode
.github/workflows/: buildwheels.yml  ci.yml  ci_2.yml  docs.yml  getdeps-3_12mp-linux.yml  getdeps-3_14-linux.yml  getdeps-main-linux.yml  getdeps_linux.yml  publish.yml  wheels.yml
CachedProperties/: cached_properties.c  cached_properties.h
Common/: audit.cpp  audit.h  code.cpp  code.h  concepts.h  dict.h  extra-py-flags.h  func.h  import.h  log.cpp  log.h  opcode_stubs.h  property.h  py-portability.h  ref.cpp  ref.h  string.h  util.cpp  util.h  watchers.cpp  watchers.h
Docs/Internal/: README.md
Docs/StaticPython/: FAQ.md  README.md
Docs/StrictModules/: README.md
Immortalize/: immortalize.cpp  immortalize.h
Interpreter/: cinder-bytecodes.c  cinder_opcode_312.h  cinderx_opcode_targets_310.h  cinderx_opcode_targets_312.h  generate_opcode_h.py  interpreter-3.12.c  interpreter.c  interpreter.h  iter_helpers.c  iter_helpers.h  makeopcodetargets.py  makeopcodetargets_312.py  opcode_312.h  regen-cases-312.sh  regen-cases.sh  regen-opcodes-310.sh  regen-opcodes-312.sh  regen-opcodes-314.sh
Interpreter/3.10/: interpreter.c  opcode.h
Interpreter/3.12/: cinder_opcode.h  cinderx_opcode_targets.h  generate_opcode_h.py  interpreter.c  opcode.h
Interpreter/3.14/: cinder-bytecodes.c  cinder_opcode.h  (+3 more)
Jit/: bitvector.cpp  bitvector.h  bytecode.cpp  bytecode.h  bytecode_offsets.h  code_allocator.cpp  code_allocator.h  compile.h  compiled_function.cpp  compiled_function.h  compiler.cpp  compiler.h  config.cpp  config.h  containers.h  context.cpp  context.h  debug_info.cpp  debug_info.h  deopt.cpp  deopt.h  deopt_patcher.cpp  deopt_patcher.h  disassembler.cpp  disassembler.h  entry.cpp  entry.h  frame.cpp  frame.h  generators_borrowed.c.gen_cached  generators_borrowed.c.template  generators_borrowed.h  generators_borrowed_3.12.c.gen_cached  generators_borrowed_3.12.c.template  generators_borrowed_3.12.gen_cached.c  generators_borrowed_3.14.c.template  generators_borrowed_3.14.gen_cached.c  generators_core.cpp  generators_core.h  generators_mm.cpp  (+41 more)
ParallelGC/: condvar.h  parallel_gc.c  parallel_gc.h  ws_deque.h
PythonBin/: python.c
PythonLib/: init_cinderx.py
RuntimeTests/: backend_test.cpp  bitvector_test.cpp  bytecode_test.cpp  cmdline_test.cpp  dataflow_test.cpp  deopt_patcher_test.cpp  deopt_test.cpp  elf_test.cpp  fixtures.cpp  fixtures.h  gen_asm_test.cpp  hir_analysis_test.cpp  hir_copy_propagation_test.cpp  hir_frame_state_test.cpp  hir_guard_test.cpp  hir_operand_type_test.cpp  hir_parser_test.cpp  hir_ssa_test.cpp  hir_test.cpp  hir_type_test.cpp  inline_cache_test.cpp  jit_context_test.cpp  jit_flag_processor_test.cpp  jit_time_log_test.cpp  lir_dce_test.cpp  lir_inliner_test.cpp  lir_postalloc_test.cpp  lir_postgen_test.cpp  lir_test.cpp  lir_verify_test.cpp  live_type_map_test.cpp  main.cpp  profile_runtime_test.cpp  pyjit_test.cpp  regalloc_test.cpp  sanity_test.cpp  testutil.cpp  testutil.h  type_profiler_test.cpp
Shadowcode/: shadowcode.c  shadowcode.h
StaticPython/: _static.c  _static.h  awaitable.c  awaitable.h  checked_dict.c  checked_dict.h  checked_list.c  checked_list.h  classloader.c  classloader.h  descrobject_vectorcall.c  descrobject_vectorcall.h  descrs.c  descrs.h  errors.c  errors.h  functype.c  functype.h  generic_type.c  generic_type.h  methodobject_vectorcall.c  methodobject_vectorcall.h  modulethunks.c  modulethunks.h  objectkey.c  objectkey.h  static_array.c  static_array.h  strictmoduleobject.c  strictmoduleobject.h  thunks.c  thunks.h  type.c  type.h  type_code.h  typed-args-info.c  typed-args-info.h  typed_method_def.c  typed_method_def.h  vtable.c  (+6 more)
StrictModules/: _strictmodule.c  analyzer.cpp  ast_visitor.h  exceptions.h  parser_util.cpp  py_headers.h  pycore_dependencies.h  pystrictmodule.cpp  pystrictmodule.h  sequence_map.h  strict_module_checker_interface.cpp  strict_module_checker_interface.h  symbol_table.cpp  symbol_table.h
TestScripts/: 3.12-dev-nosan-refleak-failures.txt  3.12-python-expected-tests-dev-nosan-jit-all.json  3.12-python-expected-tests-dev-nosan-refleak.json  3.12-python-expected-tests-dev-nosan.json  3.12-python-expected-tests-dev.json  3.12-python-expected-tests-opt-jit-all.json  3.12-python-expected-tests-opt.json  3.12-runtime-testids-passing  3.12-strictmodules-testids-passing  3.14-opt-failures.txt  cinder_jit_ignore_tests.txt  cinder_skip_test.txt  cinder_test_runner.py  cinder_test_runner310.py  cinder_test_runner312.py  common.py  devserver_skip_tests.txt  jitlist_bisect.py  no_cinderx_skip_tests.txt  refleak_skip_tests.txt  test_3.12_native.sh  test_3.12_python.sh  test_build_modes.sh  test_multithreaded_compile.sh  test_upgrade_build.sh  type_profile_tests.sh  update_hir_expected.py
Upgrade/: upgrade_assert.h  upgrade_stubs.cpp  upgrade_stubs.h  upgrade_unexported.h
UpstreamBorrow/: UpstreamBorrow.py  borrowed-3.10.gen_cached.c  borrowed-3.12.c.gen_cached  borrowed-3.12.c.template  borrowed-3.12.gen_cached.c  borrowed-3.14.c.template  borrowed-3.14.gen_cached.c  borrowed.c.gen_cached  borrowed.c.template  borrowed.h  borrowed.template.c  callgraph.py  clang_parser.py  find_missing.py
cinderx/: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  _cinderx-lib.cpp  _cinderx-lib.h  _cinderx.pyi  _static.pyi  async_lazy_value.cpp  async_lazy_value.h  async_lazy_value_iface.h  cinderjit.pyi  linker_script.ld  linker_script_bolt.ld  module_c_state.cpp  module_c_state.h  module_state.cpp  module_state.h  pyproject.toml  python.h  python_runtime.cpp  python_runtime.h  tsan_suppressions_cpython.txt
clinic/: cached_properties.c.h
scripts/: push_to_arm.ps1  sync_upstream.ps1
(+1860 files in other folders)
