[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "cinderx"
description = "Extension aimed at improving the performance of the Python runtime"
dynamic = ["version"]
requires-python = ">= 3.14.0, < 3.16"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["performance", "jit", "compiler", "optimization", "cinder"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Compilers",
]

[project.urls]
Repository = "https://www.github.com/facebookincubator/cinderx"

[tool.pytest.ini_options]
filterwarnings = [
     # test_jit_exception intentionally tests return/break/continue inside
     # finally blocks, which emit noisy SyntaxWarnings at compile time.
    "ignore::SyntaxWarning:test_cinderx.test_jit_exception",
]

[tool.cibuildwheel]
build = ["cp314-manylinux_x86_64", "cp314-musllinux_x86_64", "cp314-manylinux_aarch64", "cp314-musllinux_aarch64"]
environment = { CINDERX_ENABLE_PGO = "1", CINDERX_ENABLE_LTO = "1" }
build-verbosity = 3
# Build using the latest image to try to get the latest Python point release.
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28:latest"
musllinux-x86_64-image = "quay.io/pypa/musllinux_1_2:latest"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64:latest"
musllinux-aarch64-image = "quay.io/pypa/musllinux_1_2_aarch64:latest"
test-requires = ["pytest"]
test-command = "pytest {project}/cinderx/PythonLib/test_cinderx/test*.py"

[tool.cibuildwheel.linux]
# If it exists, pass through CINDERX_VERSION_PATCH to setuptools to specify the
# patch version.
environment-pass = ["CINDERX_VERSION_PATCH"]
